updated nav and social links in header to position absolute with no bleeding of padding issue

--- a/styles/main.css
+++ b/styles/main.css
@@ -591,15 +591,7 @@ input::placeholder {
     }
 
     /* for future slide nav */
-    header ul {
-        position: absolute;
-        left: 400px;
-    }
-
-    header li {
-        display: block;
-    }
-
+    
     h1 {
         font-size: 4rem;
         position: absolute;
@@ -610,10 +602,21 @@ input::placeholder {
         padding: 0;
     }
 
+    /* absolute left 400px will create bleeding issues !!! - But position absolute right 1000px WORKS!!! */
+    header ul {
+        position: absolute;
+        right: 1000px;
+    }
+
+    header li {
+        display: block;
+    }
+
+    
     .socialIcons {
         padding: 0;
         position: absolute;
-        top: 0;
+        right: 1000px;
     }
 
     /* Section 2 Styles  */
